[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solark_cloud"
version = "0.0.3"
authors = [{ name = "Mark Smith", email = "mark@qq.is" }]
description = "Fetch information from the Sol-Ark Cloud API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["requests", "voluptuous"]

[project.urls]
Homepage = "https://github.com/zorkian/solark_cloud"
Issues = "https://github.com/zorkian/solark_cloud/issues"
